# annual_report

./: PYPROJECT.TOML  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
annual_report/: __init__.py  annual_report.py
src/annual_report/: __init__.py  annual_report.py
src/annual_report.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_annual_report.py
