[metadata]
name = annual_report
version = 0.0.12
author = Darix SAMANI
author_email = samandarix@gmail.com
description = the objectives of this project, is to retrieve all annual report documents on a given website
long_description = file: README.md
long_description_content_type = text/markdown
url = github/darixsamani/simpar_cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
packages = simpar_cli
python_requires = >=3.7
include_package_data = True




